--- a/core/pom.xml
+++ b/core/pom.xml
@@ -50,6 +50,12 @@
       <version>${project.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.5.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
