--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -50,15 +50,11 @@
 
     <!-- SPECIFIC -->
     <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.15.4</version>
-    </dependency>
-    <dependency>
       <groupId>com.sleepycat</groupId>
       <artifactId>je</artifactId>
       <version>18.3.12</version>
     </dependency>
+
     <dependency>
       <groupId>us.codecraft</groupId>
       <artifactId>xsoup</artifactId>
@@ -69,17 +65,28 @@
       <groupId>edu.uci.ics</groupId>
       <artifactId>crawler4j</artifactId>
       <version>4.4.0</version>
+
       <exclusions>
         <exclusion>
           <groupId>com.sleepycat</groupId>
           <artifactId>je</artifactId>
         </exclusion>
       </exclusions>
+
     </dependency>
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>4.8.1</version>
+      <version>4.9.0</version>
+
+      <!-- This fixes a bug with Selenium 'NoSuchMethod: com.google.guave.ImmutableMap.of()' -->
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
