--- a/core/pom.xml
+++ b/core/pom.xml
@@ -61,6 +61,18 @@
       <version>1.5.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-queryparser</artifactId>
+      <version>9.5.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-analyzers-common</artifactId>
+      <version>8.11.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
